doc/gramatica.txt
//gramatica

program -> ini_block
ini_block -> "ini" "{" statements "}"
statements -> statement statements | statement
statement -> variable_declaration | assignment | if_statement | printing
variable_declarationInt -> type identifier "=" expression ";" | type identifier ";"
variable_declarationString -> type identifier "=" """ string """ ";" | type identifier ";"

assignment -> identifier "=" expression ";"
if_statement -> "if" "(" condition ")" "{" statements "}"
              | "if" "(" condition ")" "{" statements "}" "else" "{" statements "}"
for_statement -> "for" "(" variable_declaration ";" condition ";" assignment ")" "{" statements "}"
while_statement -> "while" "(" condition ")" "{" statements "}"
printing -> mostrar "(" identifier ")" ";"
arguments -> expression arguments | expression
expression -> factor operator expression | factor
factor -> identifier | number | "(" expression ")"
condition -> expression comparison_operator expression
operator -> "+"
          | "-"
          | "*"
          | "/"
          | "^"
comparison_operator -> ">"
                     | "<"
                     | "=>"
                     | "<="
                     | "=="
                     | "!="
type -> "int"
      | "string"
identifier -> [a-zA-Z_][a-zA-Z0-9_]*
string ->  [a-zA-Z]*
number -> [0-9]+
